<resources>
    <string name="app_name">Meal Plan</string>
    <string name="binding">Binding  Can not Be Null</string>
    <string name="planFragmentTitle">"Daily Dish Organizer</string>
    <string name="planFragmentDesc">"Simplify your week with precision meal planning. Effortlessly arrange your daily dining, ensuring a balanced and delightful culinary experience</string>
    <string name="makeFoodFragmentTitle">"Homemade Happiness Hub</string>
    <string name="makeFoodFragmentDesc">"Transform your kitchen into a haven of joy with Homemade Happiness Hub.Dive into the heartwarming experience of making food yourself, crafting delicious moments that fill your home with the aroma of culinary satisfaction.</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="click_again_to_exit">Click Again To Exit</string>
    <string name="can_t_be_empty">Can\'t be Empty</string>
    <string name="nor_email">Not a Valid Email</string>
    <string name="checkNetwork">please check your internet connection</string>
    <string name="meal">Meal</string>
    <string name="log">Log</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="bread">Bread</string>
    <string name="snack">Snack</string>
    <string name="break_fast">Break Fast</string>
    <string name="soup">Soup</string>
    <string name="drink">Drink</string>
    <string name="mealTypes">Meal Types</string>
    <string name="seeFiveStars">see our 5 Stars Restaurants</string>
    <string name="ourFiveStars">5 Stars Restaurants</string>
    <string name="randomRecipe">Random Recipe</string>
    <string name="no_item">No Item</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="number">Number</string>
    <string name="findLocation">find Location</string>
    <string name="notIncluded">not Included</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="can_t_find_google_maps">Can\'t Find Google Maps</string>
    <string name="search_meals">search Meals</string>
    <string name="nothing_found">No Item Found for The Given Filter</string>
    <string name="retry">Retry</string>
    <string name="filter_search">Filter Search</string>
    <string name="apply">Apply</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="macro_filters">Macro Filters</string>
    <string name="recipe_filter">Recipe Filters</string>
    <string name="calories_range">Calories Range</string>
    <string name="carbs_range">Carbs Range</string>
    <string name="protein_range">Protein Range</string>
    <string name="fat_range">Fat Range</string>
    <string name="select_diet">Diet</string>
    <string name="intolerance">Intolerance</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="cuisine">cuisine</string>
    <string name="filters_cleared">Filters Have Been Cleared</string>
    <string name="enable_disable_sliders">Enable/Disable sliders</string>
    <string name="dinner">Dinner</string>
    <string name="plan">plan</string>
    <string name="planFragment">planFragment</string>
    <string name="cantConnect">planFragment</string>
    <string name="couldn_t_load_video">couldn\'t load Video</string>
    <string name="log_recipe">Log Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutritions">Nutritions</string>
    <string name="all_about_this_recipe">All About this recipe!</string>
    <string name="price">Price</string>
    <string name="likes">Likes</string>
    <string name="heathScore">Heath Score</string>
    <string name="NeedsPerDay">Needs per Day</string>
    <string name="no_video">No Video Found For This Meal</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="vitaminB3">Vitamin B3</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="vitamin_e">Vitamin E</string>
    <string name="vitamin_b1">Vitamin B1</string>
    <string name="fiber">Fiber</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="net_carbohydrates">Net Carbohydrates</string>
    <string name="sugar">Sugar</string>
    <string name="no_data">No Data</string>
    <string name="description">Description</string>
    <string name="showMore">Show More</string>
    <string name="steps">Steps</string>
    <string name="ingredient">Ingredient</string>
    <string name="nutrition_chart">Nutrition Chart</string>
    <string name="add_to">Add To ?</string>
    <string name="lunch">Lunch</string>
    <string name="time_until_reset">Time Until Reset</string>
    <string name="weekly">Weekly</string>
    <string name="deleted_from_daily_plan">Deleted From Daily Plan</string>
    <string name="auto_generated_plan">Auto Generated Plan</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="change_meal_plan">Change Meal Plan?</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="similar_recipe">Similar Recipe</string>
    <string name="no_item_has_been_added">NO Item Has Been Added</string>
    <string name="your_daily_calories">Your Daily Calories</string>
    <string name="your_weekly_calories">Your Weekly Calories</string>
    <string name="your_weekly_plan_is_empty">Your Weekly Plan Is Empty</string>


</resources>