<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingVertical="@dimen/_8mdp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5mdp"
        android:text="@string/change_meal_plan"
        android:textColor="@color/cultured"
        android:textSize="@dimen/_16font_mdp"
        app:fontPath="fonts/fira_sans_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5mdp"
        android:src="@drawable/pen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/limedSpruce" />

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20mdp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/_8mdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            app:backgroundTint="@color/pastelGreen"
            android:text="@string/change"
            android:id="@+id/btnChange"/>
        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="@dimen/_8mdp"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            app:backgroundTint="@color/pastelRed"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>