<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:padding="@dimen/_10mdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/_5mdp"

    tools:background="@color/limedSpruce"
    android:layout_marginTop="@dimen/_8mdp"
    tools:ignore="UseCompoundDrawables,ContentDescription"
>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5mdp"
            android:text="@string/add_to"
            android:textColor="@color/cultured"
            android:textSize="@dimen/_11font_mdp" />

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:id="@+id/breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12mdp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8mdp"
                android:src="@drawable/breakfasts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_8mdp"
                android:text="@string/break_fast"
                android:layout_marginStart="5dp"
                android:textColor="@color/cultured"
                app:fontPath="fonts/fira_sans_light" />


        </LinearLayout>

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:id="@+id/lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18mdp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30mdp"
                android:src="@drawable/lunch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_10mdp"
                android:text="@string/lunch"
                android:textColor="@color/cultured"
                app:fontPath="fonts/fira_sans_light" />


        </LinearLayout>

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:id="@+id/dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18mdp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28mdp"
                android:src="@drawable/dinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_10mdp"
                android:text="@string/dinner"
                android:textColor="@color/cultured"
                app:fontPath="fonts/fira_sans_light" />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>